<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="22dp"
    android:paddingLeft="26dp"
    android:paddingRight="26dp"
    android:paddingTop="22dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <Button
            android:id="@+id/tv_main_menu_setting"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/main_menu_setting"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_menu_line" />

        <Button
            android:id="@+id/tv_main_menu_collect"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/main_menu_collect"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_menu_line" />

        <Button
            android:id="@+id/tv_main_menu_start_record"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/main_menu_start_record"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/tv_main_menu_stop_record"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/main_menu_stop_record"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_menu_line" />

        <Button
            android:id="@+id/tv_main_menu_start_push"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/main_menu_start_push"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/tv_main_menu_stop_push"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/main_menu_stop_push"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_menu_line" />

        <Button
            android:id="@+id/tv_main_menu_entry_push"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/main_menu_entry_push"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_menu_line" />

        <Button
            android:id="@+id/tv_main_menu_exit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/main_menu_exit"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/tv_main_menu_cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/main_menu_cancel"
        android:textColor="@color/black"
        android:textSize="14sp" />
</LinearLayout>