<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/setting_audio"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/setting_audio_bitrate"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_audio_bitrate"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="320000"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/setting_audio_channels"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_audio_channels_mono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/setting_audio_mono">

                </RadioButton>

                <RadioButton
                    android:id="@+id/rb_audio_channels_stereo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/setting_audio_stereo">

                </RadioButton>
            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/setting_audio_samplerate"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/sp_audio_samplerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:entries="@array/setting_audio_samplerate_array">

            </Spinner>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/setting_audio_codec"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/sp_audio_codec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:entries="@array/setting_audio_codec_array">

            </Spinner>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/setting_video"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/setting_video_bitrate"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_video_bitrate"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="320000"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/setting_video_frame"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_video_frame_width"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="1920"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="x"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_video_frame_height"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="1080"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/setting_video_frame_rate"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_video_frame_rate"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="60"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="帧/秒"
                    android:textSize="18sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/setting_video_codec"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/sp_video_codec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:entries="@array/setting_video_codec_array">

            </Spinner>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/setting_file_format"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_file_format_mpeg4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/setting_file_format_mpeg4">

                </RadioButton>

                <RadioButton
                    android:id="@+id/rb_file_format_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/setting_file_format_default">

                </RadioButton>
            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/setting_orientation"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/sp_orientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:entries="@array/setting_orientation_array">

            </Spinner>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_setting_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/setting_confirm" />

            <Button
                android:id="@+id/bt_setting_cancel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/setting_cancel" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
